[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/conthrax-sb.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/components/StatItem/StatItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/components/UpgradeItem/UpgradeItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/components/SkillCostItem/SkillCostItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/SkillsMenu/SkillsMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="SkillsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="NinePatchRect" parent="Container"]
anchor_right = 1.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" parent="Container/Top" instance=ExtResource( 2 )]
margin_top = 4.0
margin_right = 148.0
margin_bottom = 21.0
stat_name = "Level"

[node name="Center" type="NinePatchRect" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skills" type="VBoxContainer" parent="Container/Center"]
anchor_bottom = 1.0
margin_right = 222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifespanUpgrade" parent="Container/Center/skills" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 233.0
margin_bottom = 26.0
upgrade_name = "Lifespan"
id = "lifespan"

[node name="FusionEnergyUpgrade" parent="Container/Center/skills" instance=ExtResource( 3 )]
margin_top = 30.0
margin_right = 233.0
margin_bottom = 56.0
upgrade_name = "Fusion Energy"
id = "fusion_energy"

[node name="AttackDamageUpgrade" parent="Container/Center/skills" instance=ExtResource( 3 )]
margin_top = 60.0
margin_right = 233.0
margin_bottom = 86.0
upgrade_name = "Attack Damage"
id = "attack"

[node name="SolDamageUpgrade" parent="Container/Center/skills" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 233.0
margin_bottom = 116.0
upgrade_name = "Sol Damage"
id = "sol"

[node name="LuminosityUpgrade" parent="Container/Center/skills" instance=ExtResource( 3 )]
margin_top = 120.0
margin_right = 233.0
margin_bottom = 146.0
upgrade_name = "Luminosity"
id = "luminosity"

[node name="BlindingLightUpgrade" parent="Container/Center/skills" instance=ExtResource( 3 )]
margin_top = 150.0
margin_right = 233.0
margin_bottom = 176.0
upgrade_name = "Blinding Light"
id = "blinding_light"

[node name="Stats" type="VBoxContainer" parent="Container/Center"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -148.0

[node name="LifespanStat" parent="Container/Center/Stats" instance=ExtResource( 2 )]
margin_right = 161.0
margin_bottom = 13.0
stat_name = "Lifespan"

[node name="FusionEnergyStat" parent="Container/Center/Stats" instance=ExtResource( 2 )]
margin_top = 17.0
margin_right = 161.0
margin_bottom = 30.0
stat_name = "Fusion Energy"

[node name="AttackDamageStat" parent="Container/Center/Stats" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 161.0
margin_bottom = 47.0
stat_name = "Attack Damage"

[node name="SolDamageStat" parent="Container/Center/Stats" instance=ExtResource( 2 )]
margin_top = 51.0
margin_right = 161.0
margin_bottom = 64.0
stat_name = "Sol Damage"

[node name="LuminosityStat" parent="Container/Center/Stats" instance=ExtResource( 2 )]
margin_top = 68.0
margin_right = 161.0
margin_bottom = 81.0
stat_name = "Luminosity"

[node name="BlindingLightStat" parent="Container/Center/Stats" instance=ExtResource( 2 )]
margin_top = 85.0
margin_right = 161.0
margin_bottom = 98.0
stat_name = "Blinding Light"

[node name="Costs" type="VBoxContainer" parent="Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -88.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalCount" parent="Container/Costs" instance=ExtResource( 4 )]
margin_right = 107.0
rect_scale = Vector2( 1, 1 )
cost_name = "Total:"

[node name="CostCount" parent="Container/Costs" instance=ExtResource( 4 )]
margin_top = 26.0
margin_right = 107.0
margin_bottom = 42.0
rect_scale = Vector2( 1, 1 )
cost_name = "Cost:"

[node name="LeftCount" parent="Container/Costs" instance=ExtResource( 4 )]
margin_top = 52.0
margin_right = 107.0
margin_bottom = 68.0
rect_scale = Vector2( 1, 1 )
cost_name = "Left:"

[node name="Save" type="Button" parent="Container/Costs"]
margin_top = 78.0
margin_right = 107.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Save"
[connection signal="pressed" from="Container/Costs/Save" to="." method="_on_Save_pressed"]
